# actix-web-mvc-boilerplate

./: .gitignore  Cargo.toml  README.md  build.rs  package.json  webpack.config.js
public/: 404.html  about.html  index.html
public/static/: main.js
src/: main.rs  test.http
src/assets/js/: app.js  routes.js
src/assets/js/components/: Home.vue
src/controllers/: mod.rs
src/controllers/api/: about_controller.rs  home_controller.rs  mod.rs
src/controllers/web/: about_controller.rs  home_controller.rs  mod.rs
src/routes/: api.rs  mod.rs  web.rs
