[package]
name = "actix-web-mvc-boilerplate"
version = "0.1.0"
authors = ["ghostff <frankchris@hotmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-files = "0.2.2"
actix-rt = "1.0"
listenfd = "0.3"
mime = "0.3.16"
lazy_static = "1.4.0"
tera = "1"
